--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Blog Posts
   <h2><i class="fa fa-bookmark"></i> 全部文章</h2>
   <ul id="blog-posts" class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }} &raquo;</span><a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><span>{{ post.date | date:  "%Y/%m/%d"}} &raquo;</span><a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
